--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -20,13 +23,25 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex: 0, 1;
+  justify-self: flex-end;
+  margin-left: 16px;
+}
+
+.notifications {
+  flex: 0, 1;
+  margin-left: auto;
 }
 
 .logo {
+  display: flex;
+  flex: 0, 1;
+  justify-self: flex-start;
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-right: 16px;
 }
 
 button {
@@ -43,6 +58,16 @@ a {
   color: rebeccapurple;
 }
 
+.links {
+  display: flex;
+  flex: 0, 1;
+  align-items: center;
+  gap: 16px;
+}
+
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
