--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,24 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 10px;
+  gap: 10px;
+}
+
+.header {
+  display: flex;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons {
+  margin-top: 10px;
 }
 
 .icon {
@@ -46,6 +64,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
 }
 
 button {
